--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -95,7 +95,7 @@
                             </div>
                             <div class="card-body">
                                 <p><strong>Specialist:</strong> {{ doctor.specialization }}</p>
-                                <p><strong>Fees:</strong> ${{ doctor.fees }}</p>
+                                <p><strong>Fees:</strong> ₹{{ doctor.fees }}</p>
                                 <p><strong>Slot Duration:</strong> {{ doctor.slot_duration }} min</p>
                                 <p><strong>Available:</strong> {{ doctor.start_time }} to {{ doctor.end_time }}</p>
                                 <p><strong>Days:</strong> {{ doctor.available_days }}</p>
