--- a/templates/user/dashboard.html
+++ b/templates/user/dashboard.html
@@ -55,7 +55,7 @@
                         </div>
                         <div class="doctor-info">
                             <p><strong><i class="fas fa-stethoscope"></i> Specialist:</strong> {{ doctor.specialization }}</p>
-                            <p><strong><i class="fas fa-dollar-sign"></i> Fees:</strong> ${{ doctor.fees }}</p>
+                            <p><strong><i class="fas fa-dollar-sign"></i> Fees:</strong> ₹{{ doctor.fees }}</p>
                             <p><strong><i class="fas fa-clock"></i> Slot Time:</strong> {{ doctor.slot_duration }} min</p>
                             <p><strong><i class="fas fa-calendar"></i> Available:</strong> {{ doctor.start_time }} to {{ doctor.end_time }}</p>
                             <p><strong><i class="fas fa-calendar-week"></i> Days:</strong> {{ doctor.available_days }}</p>
